[#2032] fix link visibility in apps comment sent

--- a/frontend_lib/src/component/Timeline/Comment.styl
+++ b/frontend_lib/src/component/Timeline/Comment.styl
@@ -3,6 +3,11 @@
 .comment
   &.sent
     padding-left 5%
+    & ^[0]__body a
+      text-decoration underline
+      color #fff
+      &:hover
+        font-weight bold
   &.received
     padding-right 5%
   p
